# dir-cmp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/: simple.rs
src/: full.rs  lib.rs  light.rs  main.rs
