[package]
name = "dir-cmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
regex = "1"
clap = {version ="4.1.4", features = ["derive"]}

[dev-dependencies]
tempfile = "3"
env_logger = "0.10"
