[package]
name = "dir-cmp"
version = "0.1.0"
edition = "2021"
description = "compare two directories"
license = "Apache-2.0"
repository = "https://github.com/JimmyFoobar/dir-cmp"
keywords = ["diff", "compare"]
categories = ["filesystem"]
readme = "README.md"

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
regex = "1"
clap = {version ="4.1.4", features = ["derive"]}
env_logger = "0.10"

[dev-dependencies]
tempfile = "3"